data/derived/comb/progs/unify/prog4465.ml.out
Characters 277-278:
  | Thresh (s,t,u,v) -> if (eval s) < (eval t) then eval u else eval v;;
                                 ^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
